Convert to openapi 3
